# -SADP_tasks_p2

./: CMakeLists.txt  Makefile  README.md  runMe.cpp
task10_datacompressing/: mainTask10.hpp
task11_regexes/: mainTask11.hpp
task1_basics/: input-output.cpp  input-output.hpp  utils.cpp  utils.hpp
task2_dataoperations/: arrays.cpp  arrays.hpp  mainTask2.hpp  pointer.cpp  pointer.hpp  strings.cpp  strings.hpp
task3_complexnumber/: mainTask3.hpp
task4_constructors/: mainTask4.hpp  string.hpp
task5_lifetime/: aggregate.cpp  aggregate.hpp  child.cpp  child.hpp  mainTask5.hpp  test.cpp  test.hpp
task6_textsearch/: badCharTable.hpp  goodSuffixTable.hpp  mainTask6.hpp
task6a_refcount/: a_string.hpp  mainTask61.hpp  mainTask6a.hpp  stringContainer.hpp
task7_stl/: mainTask7.hpp  mainTask71.hpp  test7.hpp
task8_textprocessing/: mainTask8.hpp
